vlib/v/checker/tests/selector_expr_assign.out
vlib/v/checker/tests/selector_expr_assign.vv:7:6: error: struct fields can only be declared during the initialization
    5 | fn main() {
    6 |     abc := Abc{}
    7 |     abc.a := 2
      |         ^
    8 | }
